plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.0'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'jacoco'
    id "org.sonarqube" version "6.0.1.5171"
}

group = 'com.restaurant'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

// ========================================
// SONARQUBE CONFIGURATION (LOCAL)
// ========================================
sonar {
    properties {
        // ✅ LOCAL SonarQube (không phải SonarCloud)
        property "sonar.projectKey", "restaurant-user-service"
        property "sonar.projectName", "Restaurant User Service"
        property "sonar.host.url", "http://localhost:9000"

        // Source directories
        property "sonar.sources", "src/main/java"
        property "sonar.tests", "src/test/java"

        // Coverage
        property "sonar.coverage.jacoco.xmlReportPaths",
                "${buildDir}/reports/jacoco/test/jacocoTestReport.xml"

        // ✅ EXCLUSIONS - Không analyze các file này
        property "sonar.exclusions", """
            **/dto/**,
            **/model/**,
            **/entity/**,
            **/config/**,
            **/exception/**,
            **/constant/**,
            **/event/model/**,
            **/*Application.java,
            **/RestaurantApplication.java
        """.trim().replaceAll(/\s+/, '')

        // Coverage exclusions
        property "sonar.coverage.exclusions", """
            **/dto/**,
            **/model/**,
            **/entity/**,
            **/config/**,
            **/exception/**,
            **/event/model/**
        """.trim().replaceAll(/\s+/, '')

        // Language settings
//        property "sonar.language", "java"
//        property "sonar.java.source", "21"
//        property "sonar.sourceEncoding", "UTF-8"

        // Binaries
        property "sonar.java.binaries", "${buildDir}/classes/java/main"
        //property "sonar.java.libraries", configurations.runtimeClasspath.files.join(',')
        //property "sonar.java.test.libraries", configurations.testRuntimeClasspath.files.join(',')
    }
}

// ========================================
// JACOCO CONFIGURATION (CODE COVERAGE)
// ========================================
jacoco {
    toolVersion = "0.8.12"
}

jacocoTestReport {
    dependsOn test

    reports {
        xml.required = true
        html.required = true
        csv.required = false
    }

    // Exclude DTOs, Models, Config from coverage
    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: [
                    '**/dto/**',
                    '**/model/**',
                    '**/entity/**',
                    '**/config/**',
                    '**/exception/**',
                    '**/constant/**',
                    '**/event/model/**',
                    '**/*Application.class'
            ])
        }))
    }
}

// Coverage thresholds
jacocoTestCoverageVerification {
    violationRules {
        rule {
            limit {
                minimum = 0.60  // 60% coverage minimum
            }
        }

        rule {
            enabled = true
            element = 'CLASS'

            limit {
                counter = 'LINE'
                value = 'COVEREDRATIO'
                minimum = 0.50
            }

            excludes = [
                    '*.dto.*',
                    '*.model.*',
                    '*.entity.*',
                    '*.config.*',
                    '*.exception.*'
            ]
        }
    }
}

test {
    useJUnitPlatform()
    finalizedBy jacocoTestReport
}

//check {
//    dependsOn jacocoTestCoverageVerification
//}

configurations {
    all {
        resolutionStrategy {
            // Use MongoDB Driver 5.2.0 to match Spring Boot 3.5.0
            force "org.mongodb:mongodb-driver-sync:5.2.0"
            force "org.mongodb:mongodb-driver-core:5.2.0"
            force "org.mongodb:bson:5.2.0"
            force "org.mongodb:bson-record-codec:5.2.0"
        }
    }
}

repositories {
    mavenCentral()
}

ext {
    set('springBootAdminVersion', "3.5.0")
    set('springCloudVersion', "2025.0.0")
    set('mongoDriverVersion', "5.2.0")
}

dependencies {
    // Spring Boot Starters
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-amqp'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'

    // JCache support
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'org.hibernate:hibernate-jcache:6.4.4.Final'
    implementation 'javax.cache:cache-api:1.1.1'
    implementation 'io.lettuce:lettuce-core'

    // JCache provider ( Caffeine performance cache ):
    implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'
    implementation 'com.github.ben-manes.caffeine:jcache:3.1.8'

    // MongoDB
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'

    // Cloud & Service Discovery
    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'

    // Metrics & Monitoring
    implementation 'io.micrometer:micrometer-registry-prometheus'
    implementation 'io.micrometer:micrometer-core'

    // Utilities
    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
    implementation 'org.springframework:spring-web'
    implementation 'com.fasterxml.jackson.core:jackson-databind'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-hibernate6:2.15.2'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
    implementation 'com.github.librepdf:openpdf:1.3.30'
    implementation 'org.springframework:spring-messaging'
    implementation 'com.cloudinary:cloudinary-http44:1.34.0'
    implementation 'com.google.api-client:google-api-client:2.2.0'
    implementation 'org.apache.commons:commons-pool2'
    implementation 'org.redisson:redisson-spring-boot-starter:3.27.2'
    implementation 'io.github.cdimascio:java-dotenv:5.2.2'

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    // Database Drivers
    runtimeOnly 'com.mysql:mysql-connector-j'

    // Lombok & MapStruct
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'

    // Development
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // Testing
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.springframework.amqp:spring-rabbit-test'
    testImplementation 'com.h2database:h2'
    testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo:4.11.0'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

dependencyManagement {
    imports {
        mavenBom "de.codecentric:spring-boot-admin-dependencies:${springBootAdminVersion}"
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
    }
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.register('sonarAnalyze') {
    group = 'verification'
    description = 'Compile code (including tests) and run SonarQube analysis (NO test execution)'

    // ✅ Compile cả main và test classes
    dependsOn 'compileJava', 'compileTestJava', 'classes'
    finalizedBy 'sonar'
}

// Task to verify MongoDB dependencies
tasks.register('verifyMongoDependencies') {
    doLast {
        println "\n=== MongoDB Dependencies Verification ==="
        configurations.runtimeClasspath.resolvedConfiguration.resolvedArtifacts.each { artifact ->
            if (artifact.moduleVersion.id.group == 'org.mongodb') {
                println "${artifact.moduleVersion.id.module} : ${artifact.moduleVersion.id.version}"
            }
        }
        println "=========================================\n"
    }
}

// Task to list all dependencies
tasks.register('listDependencies') {
    doLast {
        println "\n=== All Dependencies ==="
        configurations.runtimeClasspath.resolvedConfiguration.resolvedArtifacts.each { artifact ->
            println "${artifact.moduleVersion.id}"
        }
        println "========================\n"
    }
}